--- a/src/scss/components/responsive.scss
+++ b/src/scss/components/responsive.scss
@@ -90,7 +90,7 @@
           margin:auto;
           width: fit-content;
           display: block;
-          margin-top: 50px;
+          margin-top: 90px;
           
           .logo{
             width: 120px;
@@ -239,9 +239,12 @@
           padding-bottom: 0px;
           padding: 0;
           text-align: center;
+          flex-direction: column;
+          gap: 0;
 
           p {
             text-align: center;
+            margin-top: 30px;
           }
 
           .block-img{
